--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # For PCBs designed using KiCad: http://www.kicad-pcb.org/
 # Format documentation: http://kicad-pcb.org/help/file-formats/
 
+# Mac
+.DS_Store
+
 # Temporary files
 *.000
 *.bak
