--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,5 @@ fp-info-cache
 # prl files
 *.kicad_prl
 
-2024l1-backups/
-2024l1-sing
-2024l2-backups/
-2024l3-backups/
-test-pcb-backups/
+*.zip
 production/
